@@ -1,20 +1,26 @@
+package com.thelocalmarketplace.software;
+
 import java.math.BigDecimal;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Scanner;
 
+import com.tdc.banknote.Banknote;
 import com.thelocalmarketplace.hardware.SelfCheckoutStationBronze;
 
 public class PayViaBanknote {
 
-    private static SelfCheckoutStationBronze selfCheckoutStationBronze;
-    private static Session session;
-    private static Scanner scanner;
+    private SelfCheckoutStationBronze selfCheckoutStationBronze;
+    private Session session;
+    private Scanner scanner;
 
-    public static void payViaBanknote() {
+    public PayViaBanknote(SelfCheckoutStationBronze selfCheckoutStationBronze, Session session) {
+        this.selfCheckoutStationBronze = selfCheckoutStationBronze;
+        this.session = session;
+    }
+
+    public BigDecimal payViaBanknote(Banknote banknote) {
         if (session.getAmountDue() != 0) {
-            List<BigDecimal> denoms = Arrays.asList(
+            List<BigDecimal> denoms = List.of(
                     new BigDecimal("5.0"), new BigDecimal("10.0"), new BigDecimal("20.0"));
 
             System.out.println("Choose denomination of banknote being inserted:");
@@ -37,11 +43,12 @@ public class PayViaBanknote {
                         if (session.getAmountDue() < 0) {
                             double change = Math.abs(session.getAmountDue());
                             System.out.println("Fully paid amount, change: " + change);
+                            return BigDecimal.valueOf(change);
                         } else {
                             System.out.println("Fully paid amount");
+                            session.getOrderItem().clear();
+                            return BigDecimal.ZERO;
                         }
-                        session.getOrderItem().clear();
-                        return;
                     }
                     System.out.println("Amount due:" + session.getAmountDue());
                 } else {
@@ -59,9 +66,13 @@ public class PayViaBanknote {
             if (totalPaid.compareTo(BigDecimal.valueOf(session.getAmountDue())) > 0) {
                 BigDecimal change = totalPaid.subtract(BigDecimal.valueOf(session.getAmountDue()));
                 System.out.println("Change to return: " + change);
+                return change;
             }
         } else {
             System.out.println("No amount due");
         }
+
+        return BigDecimal.ZERO; // Return 0 if no change or if the amount due was already 0
     }
+
 }
